--- a/fast-server/src/main/resources/application-test.yml
+++ b/fast-server/src/main/resources/application-test.yml
@@ -7,14 +7,9 @@ spring:
     #timeout: 6000ms  # 连接超时时长（毫秒）
   datasource:
     druid:
-      #MySQL
       url: jdbc:mysql://mysql:3306/fast_boot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
-      username: baba
-      password: jg5RPEZDcuFC2BX460LzAMlvdf3T9eWy
-      #Oracle
-#      url: jdbc:oracle:thin:@localhost:1521:xe
-#      username: fast_boot
-#      password: 123456
+      username: fast
+      password: 123456
       initial-size: 1
       min-idle: 1
       max-active: 1
@@ -22,16 +17,14 @@ spring:
       min-evictable-idle-time-millis: 600000
       max-evictable-idle-time-millis: 900000
       validation-query: SELECT 1
-      #Oracle数据库
-      #validation-query: SELECT 1 FROM DUAL
       test-on-borrow: false
       test-on-return: false
       test-while-idle: true
       stat-view-servlet:
         enabled: true
         url-pattern: /druid/*
-        #login-username: admin
-        #login-password: admin
+        login-username: admin
+        login-password: admin
       filter:
         stat:
           log-slow-sql: true
