--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>2.7.1</version>
     </parent>
 
     <modules>
 	    <module>fast-boot-framework</module>
+	    <module>fast-boot-demo</module>
 		<module>fast-boot-system</module>
         <module>fast-server</module>
     </modules>
