--- a/fast-server/pom.xml
+++ b/fast-server/pom.xml
@@ -15,8 +15,18 @@
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>net.maku</groupId>
+			<artifactId>fast-boot-new</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
 			<artifactId>knife4j-springdoc-ui</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
