--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     </parent>
 
     <modules>
-	    <module>fast-boot-framework</module>
 		<module>fast-boot-system</module>
 		<module>fast-boot-new</module>
+		<module>fast-framework</module>
         <module>fast-server</module>
     </modules>
 
