--- a/fast-framework/pom.xml
+++ b/fast-framework/pom.xml
@@ -5,7 +5,7 @@
 		<version>1.0.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>fast-boot-framework</artifactId>
+	<artifactId>fast-framework</artifactId>
 	<packaging>jar</packaging>
 
 	<dependencies>
