新增文件上传功能，支持阿里云、本地文件上传

--- a/fast-server/src/main/resources/application.yml
+++ b/fast-server/src/main/resources/application.yml
@@ -21,6 +21,18 @@ spring:
       max-file-size: 1024MB
       max-request-size: 1024MB
 
+storage:
+  enabled: true
+  config:
+    # 存储类型：local、aliyun
+    type: local
+    # 访问域名
+    domain: http://localhost:8080
+    # 配置访问前缀
+    prefix:
+  local:
+    # 本地上传路径
+    path: D://upload
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
