--- a/fast-boot-system/pom.xml
+++ b/fast-boot-system/pom.xml
@@ -15,6 +15,15 @@
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>net.maku</groupId>
+			<artifactId>fast-boot-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.github.whvcse</groupId>
 			<artifactId>easy-captcha</artifactId>
 		</dependency>
