--- a/fast-boot-new/pom.xml
+++ b/fast-boot-new/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>net.maku</groupId>
 		<artifactId>fast-boot</artifactId>
-		<version>1.2.0</version>
+		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fast-boot-new</artifactId>
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>net.maku</groupId>
 			<artifactId>fast-framework</artifactId>
-			<version>1.2.0</version>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
