--- a/fast-boot-system/pom.xml
+++ b/fast-boot-system/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>net.maku</groupId>
 		<artifactId>fast-boot</artifactId>
-		<version>1.2.0</version>
+		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fast-boot-system</artifactId>
@@ -12,12 +12,12 @@
 		<dependency>
 			<groupId>net.maku</groupId>
 			<artifactId>fast-framework</artifactId>
-			<version>1.2.0</version>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.maku</groupId>
 			<artifactId>fast-boot-api</artifactId>
-			<version>1.2.0</version>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aliyun.oss</groupId>
