--- a/fast-framework/pom.xml
+++ b/fast-framework/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>net.maku</groupId>
 		<artifactId>fast-boot</artifactId>
-		<version>1.2.0</version>
+		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fast-framework</artifactId>
