--- a/fast-server/pom.xml
+++ b/fast-server/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>net.maku</groupId>
 		<artifactId>fast-boot</artifactId>
-		<version>1.2.0</version>
+		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fast-server</artifactId>
@@ -11,13 +11,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>net.maku</groupId>
-			<artifactId>fast-boot-system</artifactId>
-			<version>1.2.0</version>
+			<artifactId>fast-boot-new</artifactId>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.maku</groupId>
-			<artifactId>fast-boot-new</artifactId>
-			<version>1.2.0</version>
+			<artifactId>fast-boot-system</artifactId>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
