--- a/fast-server/src/main/resources/application-dev.yml
+++ b/fast-server/src/main/resources/application-dev.yml
@@ -6,11 +6,14 @@ spring:
     #password:
     #timeout: 6000ms  # 连接超时时长（毫秒）
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/fast_boot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
     username: fast
     password: 123456
+#    driver-class-name: dm.jdbc.driver.DmDriver
+#    url: jdbc:dm://192.168.101.28:5236/fast_boot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+#    username: fast
+#    password: 12345678
     hikari:
       connection-timeout: 30000     # 等待连接池分配链接的最大时长（毫秒），超过这个时长还没有可用的连接则发生 SQLException，默认：30 秒
       minimum-idle: 2               # 最小空闲连接数
