--- a/fast-boot-module/fast-boot-message/pom.xml
+++ b/fast-boot-module/fast-boot-message/pom.xml
@@ -1,16 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>net.maku</groupId>
-		<artifactId>fast-boot</artifactId>
+		<artifactId>fast-boot-module</artifactId>
 		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>fast-boot-module</artifactId>
-	<packaging>pom</packaging>
+	<artifactId>fast-boot-message</artifactId>
+	<packaging>jar</packaging>
 
-	<modules>
-		<module>fast-boot-quartz</module>
-		<module>fast-boot-message</module>
-    </modules>
-	
+	<dependencies>
+		<dependency>
+			<groupId>net.maku</groupId>
+			<artifactId>fast-framework</artifactId>
+			<version>${revision}</version>
+		</dependency>
+	</dependencies>
+
 </project>
