--- a/fast-server/pom.xml
+++ b/fast-server/pom.xml
@@ -21,6 +21,11 @@
 <!--		</dependency>-->
 		<dependency>
 			<groupId>net.maku</groupId>
+			<artifactId>fast-boot-message</artifactId>
+			<version>${revision}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.maku</groupId>
 			<artifactId>fast-boot-system</artifactId>
 			<version>${revision}</version>
 		</dependency>
