--- a/fast-server/src/main/resources/application-dev.yml
+++ b/fast-server/src/main/resources/application-dev.yml
@@ -11,8 +11,8 @@ spring:
     username: fast
     password: 123456
 #    driver-class-name: dm.jdbc.driver.DmDriver
-#    url: jdbc:dm://192.168.101.28:5236/fast_boot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
-#    username: fast
+#    url: jdbc:dm://192.168.3.19:5236/fast_boot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+#    username: fast_boot
 #    password: 12345678
     hikari:
       connection-timeout: 30000     # 等待连接池分配链接的最大时长（毫秒），超过这个时长还没有可用的连接则发生 SQLException，默认：30 秒
