新增短信功能

--- a/fast-boot-module/fast-boot-message/pom.xml
+++ b/fast-boot-module/fast-boot-message/pom.xml
@@ -14,6 +14,18 @@
 			<artifactId>fast-framework</artifactId>
 			<version>${revision}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>dysmsapi20170525</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.tencentcloudapi</groupId>
+			<artifactId>tencentcloud-sdk-java</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
