--- a/fast-server/src/main/resources/application.yml
+++ b/fast-server/src/main/resources/application.yml
@@ -24,14 +24,10 @@ spring:
 storage:
   enabled: true
   config:
-    # 存储类型：local、aliyun
+    # 存储类型：local、aliyun、tencent、qiniu、huawei、minio
     type: local
-    # 访问域名
     domain: http://localhost:8080
-    # 配置访问前缀
-    prefix:
   local:
-    # 本地上传路径
     path: D://upload
 
 mybatis-plus:
