--- a/fast-boot-system/src/main/resources/auth.yml
+++ b/fast-boot-system/src/main/resources/auth.yml
@@ -1,12 +1,5 @@
 auth:
   ignore_urls:
-    - /actuator/**
-    - /v3/api-docs/**
-    - /webjars/**
-    - /swagger/**
-    - /swagger-resources/**
-    - /swagger-ui.html
-    - /swagger-ui/**
-    - /doc.html
-    - /sys/oauth/captcha
+    - /sys/auth/captcha
+    - /sys/auth/login
     - /upload/**
