--- a/fast-boot-system/src/main/resources/auth.yml
+++ b/fast-boot-system/src/main/resources/auth.yml
@@ -2,4 +2,6 @@ auth:
   ignore_urls:
     - /sys/auth/captcha
     - /sys/auth/login
+    - /sys/auth/send/code
+    - /sys/auth/mobile
     - /upload/**
