--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -25,11 +25,11 @@
 <!--            <artifactId>maku-boot-quartz</artifactId>-->
 <!--            <version>${revision}</version>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>net.maku</groupId>-->
-<!--            <artifactId>maku-boot-message</artifactId>-->
-<!--            <version>${revision}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-boot-message</artifactId>
+            <version>${revision}</version>
+        </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-springdoc-ui</artifactId>
