--- a/maku-boot-module/maku-module-message/pom.xml
+++ b/maku-boot-module/maku-module-message/pom.xml
@@ -6,7 +6,7 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>maku-boot-message</artifactId>
+    <artifactId>maku-module-message</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
