--- a/maku-boot-module/maku-module-quartz/pom.xml
+++ b/maku-boot-module/maku-module-quartz/pom.xml
@@ -5,7 +5,7 @@
 		<version>${revision}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>maku-boot-quartz</artifactId>
+	<artifactId>maku-module-quartz</artifactId>
 	<packaging>jar</packaging>
 
 	<dependencies>
