优化短信登录配置

--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -25,11 +25,11 @@
 <!--            <artifactId>maku-module-quartz</artifactId>-->
 <!--            <version>${revision}</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>net.maku</groupId>
-            <artifactId>maku-module-message</artifactId>
-            <version>${revision}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>net.maku</groupId>-->
+<!--            <artifactId>maku-module-message</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-springdoc-ui</artifactId>
