--- a/maku-framework/pom.xml
+++ b/maku-framework/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>DmJdbcDriver18</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
