--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <skipTests>true</skipTests>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <mybatisplus.version>3.5.2</mybatisplus.version>
         <dameng.version>8.1.2.79</dameng.version>
         <knife4j.version>3.0.3</knife4j.version>
@@ -45,6 +45,7 @@
         <minio.version>8.4.3</minio.version>
         <qcloud.cos.version>5.6.89</qcloud.cos.version>
         <huaweicloud.obs.version>3.22.3</huaweicloud.obs.version>
+        <easyexcel.version>3.1.1</easyexcel.version>
     </properties>
 
     <dependencies>
@@ -148,6 +149,11 @@
                 <groupId>com.huaweicloud</groupId>
                 <artifactId>esdk-obs-java-bundle</artifactId>
                 <version>${huaweicloud.obs.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
