集成代码生成器模块

--- a/maku-boot-module/pom.xml
+++ b/maku-boot-module/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>maku-module-quartz</module>
 		<module>maku-module-message</module>
+		<module>maku-module-generator</module>
     </modules>
 	
 </project>
