--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
-	    <dependency>
+        <dependency>
             <groupId>net.maku</groupId>
             <artifactId>maku-boot-system</artifactId>
             <version>${revision}</version>
@@ -20,16 +20,21 @@
             <artifactId>maku-boot-new</artifactId>
             <version>${revision}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>net.maku</groupId>-->
-<!--            <artifactId>maku-module-quartz</artifactId>-->
-<!--            <version>${revision}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>net.maku</groupId>-->
-<!--            <artifactId>maku-module-message</artifactId>-->
-<!--            <version>${revision}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-quartz</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-generator</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-message</artifactId>
+            <version>${revision}</version>
+        </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-springdoc-ui</artifactId>
