--- a/maku-boot-module/pom.xml
+++ b/maku-boot-module/pom.xml
@@ -12,6 +12,7 @@
 		<module>maku-module-quartz</module>
 		<module>maku-module-message</module>
 		<module>maku-module-generator</module>
+		<module>maku-module-monitor</module>
     </modules>
 	
 </project>
