--- a/maku-server/src/main/resources/application-dev.yml
+++ b/maku-server/src/main/resources/application-dev.yml
@@ -30,3 +30,26 @@ spring:
       max-lifetime: 1800000         # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认： 30 分钟
       connection-test-query: SELECT 1
       pool-name: MakuHikariCP
+
+
+--- ############ 监控相关配置
+
+# Actuator 配置
+management:
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: '*'
+
+# Spring Boot Admin 配置
+spring:
+  boot:
+    admin:
+      # Spring Boot Admin Server 服务端地址
+      context-path: /monitor/admin
+      client:
+        # 指定 Spring Boot Admin Server 服务端地址
+        url: http://127.0.0.1:${server.port}/${spring.boot.admin.context-path}
+        instance:
+          service-host-type: IP
