--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <qcloud.cos.version>5.6.89</qcloud.cos.version>
         <huaweicloud.obs.version>3.22.3</huaweicloud.obs.version>
         <easyexcel.version>3.1.1</easyexcel.version>
+        <easytrans.version>2.0.11</easytrans.version>
     </properties>
 
     <dependencies>
@@ -154,6 +155,16 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
                 <version>${easyexcel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fhs-opensource</groupId>
+                <artifactId>easy-trans-spring-boot-starter</artifactId>
+                <version>${easytrans.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fhs-opensource</groupId>
+                <artifactId>easy-trans-mybatis-plus-extend</artifactId>
+                <version>${easytrans.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
