--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -20,24 +20,29 @@
             <artifactId>maku-boot-new</artifactId>
             <version>${revision}</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>net.maku</groupId>-->
-        <!--            <artifactId>maku-module-quartz</artifactId>-->
-        <!--            <version>${revision}</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>net.maku</groupId>-->
-        <!--            <artifactId>maku-module-generator</artifactId>-->
-        <!--            <version>${revision}</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>net.maku</groupId>-->
-        <!--            <artifactId>maku-module-message</artifactId>-->
-        <!--            <version>${revision}</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-quartz</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-generator</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-message</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-monitor</artifactId>
+            <version>${revision}</version>
+        </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-springdoc-ui</artifactId>
+            <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
