--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -41,13 +41,14 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <artifactId>okio</artifactId>
+            <groupId>com.squareup.okio</groupId>
+            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
