--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -15,40 +15,35 @@
             <artifactId>maku-boot-system</artifactId>
             <version>${revision}</version>
         </dependency>
-        <dependency>
-            <groupId>net.maku</groupId>
-            <artifactId>maku-boot-new</artifactId>
-            <version>${revision}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.maku</groupId>
-            <artifactId>maku-module-quartz</artifactId>
-            <version>${revision}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.maku</groupId>
-            <artifactId>maku-module-generator</artifactId>
-            <version>${revision}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.maku</groupId>
-            <artifactId>maku-module-message</artifactId>
-            <version>${revision}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.maku</groupId>
-            <artifactId>maku-module-monitor</artifactId>
-            <version>${revision}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>net.maku</groupId>-->
+<!--            <artifactId>maku-boot-new</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.maku</groupId>-->
+<!--            <artifactId>maku-module-quartz</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.maku</groupId>-->
+<!--            <artifactId>maku-module-generator</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.maku</groupId>-->
+<!--            <artifactId>maku-module-message</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.maku</groupId>-->
+<!--            <artifactId>maku-module-monitor</artifactId>-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <artifactId>okio</artifactId>
-            <groupId>com.squareup.okio</groupId>
-            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
