--- a/maku-boot-system/pom.xml
+++ b/maku-boot-system/pom.xml
@@ -21,6 +21,11 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>maku-module-online</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
