修复代码生成器，不能添加数据源问题

--- a/maku-server/src/main/resources/application.yml
+++ b/maku-server/src/main/resources/application.yml
@@ -43,6 +43,8 @@ storage:
 maku:
   xss:
     enabled: true
+    exclude-urls:
+      - /maku-generator/**
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
