放行验证码

--- a/maku-boot-system/src/main/resources/auth.yml
+++ b/maku-boot-system/src/main/resources/auth.yml
@@ -1,6 +1,7 @@
 auth:
   ignore_urls:
     - /sys/auth/captcha
+    - /sys/auth/captcha/enabled
     - /sys/auth/login
     - /sys/auth/send/code
     - /sys/auth/mobile
