--- a/maku-boot-system/src/main/resources/auth.yml
+++ b/maku-boot-system/src/main/resources/auth.yml
@@ -3,6 +3,8 @@ auth:
     - /sys/auth/captcha
     - /sys/auth/captcha/enabled
     - /sys/auth/login
+    - /sys/auth/token
     - /sys/auth/send/code
     - /sys/auth/mobile
     - /upload/**
+    - /
