--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.6</version>
+        <version>3.2.1</version>
     </parent>
 
     <modules>
@@ -31,7 +31,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
-        <mybatisplus.version>3.5.3.2</mybatisplus.version>
+        <mybatisplus.version>3.5.5</mybatisplus.version>
         <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
         <redisson.version>3.21.3</redisson.version>
         <dameng.version>8.1.2.79</dameng.version>
@@ -48,8 +48,9 @@
         <huaweicloud.obs.version>3.22.3</huaweicloud.obs.version>
         <easyexcel.version>3.3.2</easyexcel.version>
         <okio.version>3.3.0</okio.version>
-        <easytrans.version>2.2.7</easytrans.version>
+        <easytrans.version>3.0.0</easytrans.version>
         <jsoup.version>1.16.1</jsoup.version>
+        <mybatis.spring.version>3.0.3</mybatis.spring.version>
         <transmittable.thread.local.version>2.14.2</transmittable.thread.local.version>
     </properties>
 
@@ -180,6 +181,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>transmittable-thread-local</artifactId>
                 <version>${transmittable.thread.local.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis.spring.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
