--- a/maku-server/pom.xml
+++ b/maku-server/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
         <dependency>
             <groupId>net.maku</groupId>
+            <artifactId>maku-module-member</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
             <artifactId>maku-module-monitor</artifactId>
             <version>${revision}</version>
         </dependency>
