--- a/maku-boot-module/pom.xml
+++ b/maku-boot-module/pom.xml
@@ -13,6 +13,7 @@
 		<module>maku-module-generator</module>
 		<module>maku-module-monitor</module>
 		<module>maku-module-member</module>
+        <module>maku-module-iot</module>
     </modules>
 	
 </project>
