--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <aliyun.dm.version>1.0.6</aliyun.dm.version>
         <tencentcloud.sdk.ses.version>3.1.944</tencentcloud.sdk.ses.version>
         <mail.version>1.6.2</mail.version>
+        <spring-integration-mqtt.version>5.5.6</spring-integration-mqtt.version>
     </properties>
 
     <dependencies>
@@ -228,6 +229,11 @@
                 <groupId>com.sun.mail</groupId>
                 <artifactId>javax.mail</artifactId>
                 <version>${mail.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-mqtt</artifactId>
+                <version>${spring-integration-mqtt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
